public class UserLevel
{
    public int id { get; set; }
    public int user_id { get; set; }
    public int level_id { get; set; }
}