// ==========================================
// 1. HAUPTTABELLEN
// ==========================================
Table user {
  id int [pk, increment]
  email varchar [unique, not null]
  password_hash varchar [not null]
  is_deleted boolean [default: false]
  is_Admin boolean [default: false]
  is_ToNotify boolean [default: false]
}

Table refresh_token {
  id int [pk, increment]
  token varchar [not null]
  user_id int [not null]
  expires timestamp [not null]
  is_revoked boolean [default: false]
}

Table level {
  id int [pk, increment]
  name varchar [unique, not null] // z.B. "low", "medium", "high" oder "beta-tester"
}

Table category {
  id int [pk, increment]
  name varchar [not null]
  description text
  level_id int [not null]         // Jede Kategorie gehört zu genau einem Level
}

// ==========================================
// 2. M:N TABELLE (User <-> Level)
// ==========================================
Table user_level {
  user_id int [not null]
  level_id int [not null]
  
  indexes {
    (user_id, level_id) [unique, note: 'Ein User kann jedes Level nur 1x besitzen']
  }
}

// ==========================================
// 3. BEZIEHUNGEN
// ==========================================
Ref: user_level.user_id > user.id
Ref: user_level.level_id > level.id
Ref: category.level_id > level.id
Ref: refresh_token.user_id > user.id